$Id: ChangeLog,v 1.7 2003/07/23 19:17:51 haraldkipp Exp $

2003-07-23  Harald Kipp  <harald.kipp@egnite.de>

	* Michael Fisher contributed the first ATAPI version
	of his IDE driver and FAT filesystem. Note, that the
	IDE port moved from 0x8000 to 0xE000.


2003-07-21  Harald Kipp  <harald.kipp@egnite.de>

	* Version 3.3 prepared for release.

	* os/bankmem.c: Support for banked memory added.

	* os/ir.c: Support for infrared remote control added.

	* dev/irsony.c: First infrared remote control driver
	for Sony TV codes.

	* dev/vs1001k.c: Internal buffer handling replaced by
	banked memory support routines.

	* app/nutpiper: New application. Shoutcast radio with
	remote control, LCD displayand banked memory support.
	Experimental.


2003-07-20  Harald Kipp  <harald.kipp@egnite.de>

	* pro/httpd.c: Reduced RAM usage by moving string
	literals to program space.

	* net/ipout.c: Memory hole bugfix.

	* net/udpsock.c: System crash on UDP send failure
	has been fixed.

	* app/httpd: Redesigned HTTP server sample added.

	* dev: New Ethernet driver for CS8900A.

	* crt/vsscanf.c: Bugfix for sscanf functions.

	* crt/sprintf_p.c: Bugfix.

	* crt/filelength.c: Wrong description replaced.

	* pro/dhcpc.c: Added code to support secondary DNS.

	* pro/resolve.c: Dito.

	* No explanation had been given how to disable the
	timeout of several functions using NutEventWait().
	A defined value of NUT_WAIT_INFINITE has been added
	to event.h.

	* Missing directories added to repository.

	* urom filesystem filenames moved to program space
	to save RAM.

	* Conflicting Ethernet driver routine names solved.


2003-07-17  Harald Kipp  <harald.kipp@egnite.de>

	* dev/hd44780.c: Works with applications which may
	change the data direction registers.

	* dev/nicrtl.c: Speed enhancements and being less
	strictly for accepting valid frames.

	* dev/twif.c: Missing speed settings added.

	* pro/dhcpc.c: No more default (egnite) MAC address.

	* pro/httpd.c: Memory hole fixed.

